# fenicsx-fus

./: .clang-format  .gitignore  LICENSE.md  README.md  animate.py  diffraction_2d.py  diffraction_3d.py  diffraction_using_derivative_2d.py  diffraction_with_linear_approx_bc.py  focused_transducer_1d.py  focused_transducer_2d.py  focused_transducer_3d.py  focused_transducer_3d_plane_projection.py  focused_transducer_models.py  geo2xdmf.py  geo2xdmf_2d.py  hifu_mesh_2d.geo  hifu_mesh_3d.geo  linear_1d.py  linear_1d_direct.py  linear_1d_gll.py  linear_1d_gll_vector.py  linear_1d_gllv_direct.py  linear_1d_gllv_scipy.py  linear_1d_scipy.py  linear_2d.py  linear_2d_gll.py  linear_2d_serial.py  linear_3d_gll_vector.py  lossy_1d.py  mesh_generator-1d.py  mesh_generator-2d.py  mesh_generator-3d.py  models.py  msh2xdmf.py  mwe-eval_parallel.py  piston.h5  piston.xdmf  piston_radiator.ipynb  plane_wave_models.py  (+15 more)
cpp/: README.md  (+8 more)
cpp/LinearGLL-hifu3D/: CMakeLists.txt  LinearGLL.hpp  forms.c  forms.h  forms.ufl  main.cpp  speed
cpp/examples/linear_planar_3d_opt/: CMakeLists.txt  forms.ufl  main.cpp
cpp/examples/linear_planewave2d_opt/: CMakeLists.txt  forms.ufl  main.cpp  mesh.xdmf
cpp/experiments/exp1/: CMakeLists.txt  README.md  main.cpp
cpp/fenicsx-sf/tests/: CMakeLists.txt  forms.py  operators.cpp
cpp/mwe/parallel_eval/: CMakeLists.txt  form.ufl  main.cpp
cpp/mwe/sum_factorisation/: CMakeLists.txt  main.cpp  main.py
python/: README.md  linear_1d.py  rk.py  setup.cfg  westervelt_1d.py
python/LinearGLL/: LinearGLL.py  main.py
python/LinearGLL-hifu/: LinearGLL.py  main.py
python/LinearGLL-hifu2D/: LinearGLL.py  main.py
python/LinearGLL-hifu3D/: LinearGLL.py  main.py
python/LinearGLL-planewave2D/: main.py
python/WesterveltGLL/: WesterveltGLL.py  main.py
python/WesterveltGLL-planewave2D/: WesterveltGLL.py  main.py
python/benchmarks/MENDOUSSE/: mendousse.py
python/common/: linear.py  westervelt.py
python/examples/: linear_hifu2d.py  linear_planewave2d.py  westervelt_hifu2d.py  westervelt_planewave2d.py
python/examples/linear_hifu2d/: linear_hifu2d.py
python/examples/linear_penetrable2d/: linear_penetrable2d.py  mesh.h5  mesh.xdmf
python/examples/linear_planar2d/: linear_planar2d.py  mesh.h5  mesh.xdmf
python/examples/linear_planar2d_1/: linear_planar2d_1.py
python/examples/linear_planar2d_1_exp/: linear_planar2d_1_exp.py
python/examples/linear_planar2d_1_imp/: linear_planar2d_1_imp.py  mesh.h5
python/examples/linear_planar2d_2/: linear_planar2d_2.py
python/examples/linear_planar2d_2_exp/: linear_planar2d_2_exp.py
python/examples/linear_planar2d_2_imp/: linear_planar2d_2_imp.py
python/examples/linear_planar2d_pml/: linear_planar2d_pml.py  mesh.h5
python/examples/linear_planewave1d_1/: linear_planewave1d_1.py
python/examples/linear_planewave1d_1_exp/: linear_planewave1d_1_exp.py
python/examples/linear_planewave1d_1_imp/: linear_planewave1d_1_imp.py
python/examples/linear_planewave1d_1_newmark/: linear_planewave1d_1_newmark.py
python/examples/linear_planewave1d_2_exp/: linear_planewave1d_2_exp.py
python/examples/linear_planewave1d_2_imp/: linear_planewave1d_2_imp.py
python/examples/linear_planewave1d_inhomogenous/: linear_planewave1d_inhomogenous.py
python/examples/linear_planewave2d/: linear_planewave2d.py
python/examples/linear_planewave2d_1/: linear_planewave2d_1.py
python/examples/linear_planewave2d_1_exp/: linear_planewave2d_1_exp.py
python/examples/linear_planewave2d_1_imp/: linear_planewave2d_1_imp.py
python/examples/linear_planewave2d_2/: linear_planewave2d_2.py  mesh.h5  mesh.xdmf
python/examples/linear_planewave2d_3/: linear_planewave2d_3.py  mesh.h5  mesh.xdmf
python/examples/linear_planewave2d_4/: linear_planewave2d_4.py
python/examples/linear_planewave2d_4_exp/: linear_planewave2d_4_exp.py
python/examples/linear_planewave2d_4_imp/: linear_planewave2d_4_imp.py
python/examples/linear_planewave2d_5/: linear_planewave2d_5.py  mesh.h5
python/examples/linear_planewave3d/: linear_planewave3d.py  u.h5  u.xdmf
python/examples/linear_pwp2d/: linear_pwp2d.py  u_exact.h5  u_exact.xdmf  u_fe.h5  u_fe.xdmf
python/examples/linear_pwp3d/: linear_pwp3d.py  u_exact.h5  u_exact.xdmf  u_fe.h5  u_fe.xdmf
python/examples/linear_soundhard2d/: linear_soundhard2d.py  mesh.h5  mesh.xdmf
python/examples/linear_soundsoft2d/: linear_soundsoft2d.py  mesh.h5  u.h5  u.xdmf
python/examples/lossy_planar2d/: lossy_planar2d.py  mesh.h5
python/examples/lossy_planar2d_1/: lossy_planar2d_1.py
python/examples/lossy_planar2d_1_exp/: lossy_planar2d_1_exp.py
python/examples/lossy_planar2d_1_imp/: lossy_planar2d_1_imp.py
python/examples/lossy_planar2d_2/: lossy_planar2d_2.py
python/examples/lossy_planar2d_2_exp/: lossy_planar2d_2_exp.py  mesh.h5
python/examples/lossy_planar2d_2_imp/: lossy_planar2d_2_imp.py
python/examples/lossy_planar2d_3/: lossy_planar2d_3.py
python/examples/lossy_planar2d_3_exp/: lossy_planar2d_3_exp.py  mesh.xdmf
python/examples/lossy_planar2d_3_imp/: lossy_planar2d_3_imp.py
python/examples/lossy_planar2d_4_exp/: lossy_planar2d_4_exp.py
python/examples/lossy_planewave2d/: lossy_planewave2d.py
python/examples/lossy_planewave2d_1/: lossy_planewave2d_1.py
python/examples/lossy_planewave2d_1_exp/: lossy_planewave2d_1_exp.py
python/examples/lossy_planewave2d_1_imp/: lossy_planewave2d_1_imp.py
python/examples/lossy_planewave2d_2/: lossy_planewave2d_2.py
python/examples/lossy_planewave2d_2_exp/: lossy_planewave2d_2_exp.py
python/examples/lossy_planewave2d_2_imp/: lossy_planewave2d_2_imp.py
python/examples/westervelt_hifu2d/: mesh.h5  westervelt_hifu2d.py
python/examples/westervelt_planar2d_1_exp/: mesh.xdmf  (+1 more)
python/test/: test_element_mass_matrix.py  test_linear_1d.py  test_westervelt_1d.py
python/tests/: test_element_mass_matrix.py  test_linear_1d.py  test_linear_scipy_1d.py  test_lineargll_1d.py  test_lineargll_scipy_1d.py  test_linearspectral_1d.py  test_lossygll_1d.py  test_lossyspectral_1d.py  test_westervelt_1d.py  test_westerveltgll_1d.py  test_westerveltspectral_1d.py
(+692 files in other folders)
