[metadata]
name = fenicsxfus
version = 0.0.1
author = Adeeb Arif Kor
author_email = mabm4@cam.ac.uk
description = Package for focused ultrasound simulation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/adeebkor/fenicsx-fus
project_urls =
    Bug Tracker = https://github.com/adeebkor/fenicsx-fus/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src